--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,82 @@
-.App {
-  text-align: center;
-
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+grid {
+    display: grid;
+    grid-template-areas:
+        "b c c"
+        "t t t "
+        "t t t "
+        "t t t "
+        "t t t "
+        "t t t " ;  
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  @import url('https://fonts.googleapis.com/css?family=Ubuntu');
+  body {
+    margin: 0;
   }
-  to {
-    transform: rotate(360deg);
+  .Nav {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 1em;
+    align-items: center;
+    text-align: center;
+    border-bottom: 4px solid black;
+    background: red;
   }
-}
 
-.grid {
-  display: grid;
-  grid-template-areas:
-      "n n n "
-      "t t t "
-      "t t t "
-      "t t t "
-      "t t t "
-      "t t t "
-      
-}
 
-nav {
-  grid-area: n;
-  display: flex;
-  text-align: center;
-  background-color: red ;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  align-content: stretch;
-  justify-content: space-between;
-  align-items: center;
-}
+  @media screen and (max-width: 900px) {
+    nav {
+      grid-template-columns: 100%;
+      grid-template-rows: auto;
+      grid-gap: 1em;
+   }
+  }  
+  
+  
+  .logo {
+    grid-column: 3;
+    background-image: url("https://blog.codepen.io/wp-content/uploads/2012/06/Black-Large.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 10vh;
+  }
+  
+  .3 {
+    grid-column: 4;
+  }
+  
+  .4 {
+    grid-column: 5;
+  }
+  
+  .navLinks {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.2em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: black;
+  }
+  
+  .navLinks:hover {
+    color: white;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    padding: 1em 1em;
+  }
+  
+  #twist {
+    color: blue;
+  }
 
-.bugTitle{
-  grid-area: n;
-  font-size: 60px;
-  text-decoration: none;
+
+
+
+  /* .bugTitle{
+    grid-area:b;
+    display:flex;
 }
-.trans{
-  grid-area: t;
-  display: flex;
-}
+.but{
+    grid-area:c;
+    display:flex;
+} */
