--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,44 @@
 grid {
     display: grid;
     grid-template-areas:
-        "b c c"
+        "b c d"
         "t t t "
         "t t t "
         "t t t "
         "t t t "
         "t t t " ;  
   }
-  @import url('https://fonts.googleapis.com/css?family=Ubuntu');
-  body {
-    margin: 0;
+
+    .trans {
+        grid-area: t;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-content: space-around;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+  .bugTitle{
+    text-decoration: none;
+    font-size: 30px;
+    color: white;
   }
+  
   .Nav {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: auto;
+    display: flex;
+    /* display: grid; */
     grid-gap: 1em;
     align-items: center;
     text-align: center;
     border-bottom: 4px solid black;
     background: red;
-  }
+    font-size: 20px;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-between;
+}
 
-
-  @media screen and (max-width: 900px) {
-    nav {
-      grid-template-columns: 100%;
-      grid-template-rows: auto;
-      grid-gap: 1em;
-   }
-  }  
-  
-  
-  .logo {
-    grid-column: 3;
-    background-image: url("https://blog.codepen.io/wp-content/uploads/2012/06/Black-Large.png");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 10vh;
-  }
-  
-  .3 {
-    grid-column: 4;
-  }
-  
-  .4 {
-    grid-column: 5;
-  }
   
   .navLinks {
     font-family: 'Ubuntu', sans-serif;
@@ -66,17 +56,5 @@ grid {
   }
   
   #twist {
-    color: blue;
+    color: Orange;
   }
-
-
-
-
-  /* .bugTitle{
-    grid-area:b;
-    display:flex;
-}
-.but{
-    grid-area:c;
-    display:flex;
-} */
